# larksuite-oapi-sdk-rs

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: im-topic-and-card-migration.md
examples/: README.md  app_registration.rs  application_v6.rs  authen_oauth.rs  bitable_records.rs  calendar_events.rs  card_action_handler.rs  channel_normalize.rs  channel_send.rs  client_config.rs  drive_files.rs  event_handler.rs  go_v397_endpoint.rs  im_message_query.rs  im_stream_download.rs  im_upload_download.rs  raw_api.rs  send_message.rs  sheets_read.rs  ws_client.rs
proto/: ws.proto
src/: axum_handler.rs  cache.rs  card.rs  channel.rs  client.rs  config.rs  constants.rs  crypto.rs  error.rs  event.rs  http_handler.rs  json.rs  lib.rs  macros.rs  registration.rs  req.rs  resp.rs  token.rs  transport.rs  ws.rs
src/channel/: builder.rs  duration.rs  handler.rs  identity.rs  normalize.rs  policy.rs  runtime.rs  safety.rs  state.rs  stream.rs  tests.rs  types.rs  util.rs
src/client/: builder.rs  raw.rs  services.rs  tokens.rs
src/event/: callback.rs  card_action.rs
src/events/: acs.rs  apaas.rs  application.rs  approval.rs  attendance.rs  auth.rs  baike.rs  bitable.rs  calendar.rs  common.rs  compensation.rs  contact.rs  corehr.rs  corehr_v2.rs  docx.rs  drive.rs  ehr.rs  elearning.rs  helpdesk.rs  hire.rs  im.rs  lingo.rs  mail.rs  meeting_room.rs  minutes.rs  mod.rs  moments.rs  okr.rs  p1.rs  passport.rs  payroll.rs  performance.rs  search.rs  security_and_compliance.rs  sheets.rs  task.rs  vc.rs  wiki.rs
src/service/: common.rs  go_v397.rs  go_v397_metadata.rs  mod.rs
src/service/acs/: v1.rs
src/service/admin/: v1.rs
src/service/aily/: v1.rs
src/service/apaas/: v1.rs
src/service/application/: mod.rs  v1.rs  v5.rs  v6.rs  v7.rs
src/service/approval/: v4.rs
src/service/attendance/: v1.rs
src/service/auth/: mod.rs  v3.rs
src/service/authen/: v1.rs
src/service/baike/: v1.rs
src/service/base/: v2.rs
src/service/bitable/: v1.rs
src/service/block/: v1.rs  v2.rs
src/service/board/: v1.rs
src/service/calendar/: v4.rs
src/service/cardkit/: v1.rs
src/service/compensation/: v1.rs
src/service/contact/: v3.rs
tests/: acs_event.rs  apaas_event.rs  application_event.rs  approval_event.rs  auth_event.rs  bitable_iterator.rs  cache.rs  calendar_event.rs  card.rs  client_builder.rs  compensation_event.rs  config.rs  constants.rs  contact_event.rs  contact_iterator.rs  corehr_event.rs  corehr_offboarding_iterator.rs  corehr_v2_event.rs  crypto.rs  drive_event.rs  drive_iterator.rs  elearning_event.rs  error.rs  event_dispatch.rs  event_v2.rs  generated_service_smoke.rs  helpdesk_event.rs  hire_action_response_wrappers.rs  hire_agency_read.rs  hire_auxiliary_read.rs  hire_catalog.rs  hire_code_only_responses.rs  hire_code_only_sweep.rs  hire_event.rs  hire_existing_model_write_responses.rs  hire_external_read.rs  hire_external_write_responses.rs  hire_i18n_models.rs  hire_interview_support.rs  hire_job_utility_read.rs  (+31 more)
tests/common/: mod.rs
tests/generated_service_smoke/: acs.rs  admin_v1.rs  application_v1.rs  application_v5_v7.rs  application_v6.rs  approval.rs  attendance.rs  auth.rs  baike.rs  base.rs  bitable.rs  block.rs  board.rs  calendar.rs  cardkit.rs  contact.rs  contact_basic.rs  corehr.rs  directory.rs  docs.rs  docx.rs  drive.rs  ehr.rs  ext.rs  harness.rs  helpdesk.rs  hire.rs  human_authentication.rs  im.rs  im_v2.rs  lingo.rs  mail.rs  mdm.rs  minutes.rs  okr.rs  passport.rs  payroll.rs  performance.rs  personal_settings.rs  prelude.rs  (+15 more)
tools/: generate_go_rust_service_parity.go  generate_go_rust_service_parity_test.go  generate_go_service_catalog.go  generate_go_service_catalog_test.go  generate_go_v397_metadata.go  go_rust_service_parity.json  go_service_catalog.json
(+213 files in other folders)
