[package]
name = "larksuite-oapi-sdk-rs"
version = "0.1.0"
description = "Lark/Feishu OpenAPI SDK for Rust"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/adamcavendish/larksuite-oapi-sdk-rs"

[dependencies]
aes = "0.9"
base64 = "0.22"
cbc = "0.2"
hex = "0.4"
http = "1"
aioduct = { version = "0.1.2", features = ["json", "tokio", "rustls"] }
bytes = "1"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.32"

[build-dependencies]
prost-build = "0.13"
