[package]
name = "larksuite-oapi-sdk-rs"
version = "0.1.0"
description = "Lark/Feishu OpenAPI SDK for Rust"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/adamcavendish/larksuite-oapi-sdk-rs"
keywords = ["lark", "feishu", "larksuite", "openapi", "sdk"]
readme = "README.md"
categories = ["api-bindings", "web-programming::http-client"]

[features]
axum = ["dep:axum"]
ws = ["dep:tokio-tungstenite", "dep:prost", "dep:futures-util", "dep:prost-build"]

[dependencies]
aes = "0.9"
axum = { version = "0.8", optional = true }
base64 = "0.22"
cbc = { version = "0.2", features = ["alloc"] }
futures-util = { version = "0.3", optional = true }
hex = "0.4"
http = "1"
percent-encoding = "2"
aioduct = { version = "0.1.3", features = ["json", "tokio", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
prost = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["time", "rt"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"], optional = true }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tracing-subscriber = "0.3"

[[example]]
name = "ws_client"
required-features = ["ws"]
